--- a/attendancetracker/public/index.html
+++ b/attendancetracker/public/index.html
@@ -4,12 +4,27 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Attendance Tracker</title>
   </head>
+  <style>
+    #sorry {
+      text-align: center;
+      margin-top: 24%; 
+      font-family: Roboto, Open Sans, sans-serif;
+      color: black; 
+    }
+    #oops {
+      font-size: 40px; 
+      color: #134074; 
+    }
+  </style> 
   <body>
     <noscript>
-      <strong>We're sorry but Attendance Tracker doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <div id="sorry">
+      <strong id="oops">Uh oh, JavaScript seems to have kicked the bucket</strong>
+      <br> <br>
+      <strong>We're sorry, but Attendance Tracker doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      </div> 
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
